--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "unzip-stream": "^0.3.1"
   },
   "devDependencies": {
-    "mocha": "^8.2.1"
+    "mocha": "^8.2.1",
+    "tmp": "^0.2.1"
   }
 }
